package AbstractFactory.Models;

public interface IVehicle {
    String getVehicleInformation();
}
