package AbstractFactory.Products.Bonnet;

public interface IBonnet {
    String getInformation();
}
