package AbstractFactory.Products.Chain;

public interface IChain {
    String getInformation();
}
