package AbstractFactory.Products.Chassis;

public class CarChassis implements IChassis {
    public String getInformation() {
        return String.format("Chasis de auto super copado");
    }
}
