package AbstractFactory.Products.Chassis;

public interface IChassis {
    String getInformation();
}
