package AbstractFactory.Products.Door;

public interface IDoor {
    String getInformation();
}
