package AbstractFactory.Products.Frame;

public interface IFrame {
    String getInformation();
}
