package AbstractFactory.Products.Handlebars;

public interface IHandlebars {
    String getInformation();
}
