package AbstractFactory.Products.Handlebars;

public class MotorcycleHandlebars implements IHandlebars {
    public String getInformation() {
        return String.format("manubrio de moto");
    }
}
