package AbstractFactory.Products.Motor;

public interface IMotor {
    String getInformation();
}
