package AbstractFactory.Products.Motor;

public class MotorcycleMotor implements IMotor {
    public String getInformation() {
        return String.format("Nose de motores de moto");
    }
}
