package AbstractFactory.Products.Seat;

public interface ISeat {
    String getInformation();
}
