package AbstractFactory.Products.SteeringWheel;

public interface ISteeringWheel {
    String getInformation();
}
