package AbstractFactory.Products.TailPipe;

public interface ITailPipe {
    String getInformation();
}
