package AbstractFactory.Products.Wheel;

public interface IWheel {
    String getInformation();
}
